Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13452

Assertion `!recv_no_log_write' failed in lsn_t log_reserve_and_open

    XMLWordPrintable

Details

    Description

      10.2 6d51817d2cd79edbc15328bef532a5375f184219

      2017-08-04 18:04:05 140563532476480 [Note] InnoDB: Highest supported file format is Barracuda.
      2017-08-04 18:04:05 140563532476480 [Note] InnoDB: Starting crash recovery from checkpoint LSN=1633912
      2017-08-04 18:04:05 140563532476480 [Note] InnoDB: Starting a batch to recover 272 pages from redo log.
      mysqld: /data/src/10.2/storage/innobase/log/log0log.cc:362: lsn_t log_reserve_and_open(ulint): Assertion `!recv_no_log_write' failed.
      170804 18:04:06 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007fd77d360ee2 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6
      #8  0x0000558b60644192 in log_reserve_and_open (len=199) at /data/src/10.2/storage/innobase/log/log0log.cc:362
      #9  0x0000558b60663365 in mtr_t::Command::finish_write (this=0x7ffd21be28a0, len=199) at /data/src/10.2/storage/innobase/mtr/mtr0mtr.cc:899
      #10 0x0000558b6066248d in mtr_t::commit_checkpoint (this=0x7ffd21be2920, checkpoint_lsn=1633912, write_mlog_checkpoint=true) at /data/src/10.2/storage/innobase/mtr/mtr0mtr.cc:623
      #11 0x0000558b608bf759 in fil_names_clear (lsn=1633912, do_write=true) at /data/src/10.2/storage/innobase/fil/fil0fil.cc:6580
      #12 0x0000558b60656171 in recv_recovery_from_checkpoint_start (flush_lsn=1633893) at /data/src/10.2/storage/innobase/log/log0recv.cc:3353
      #13 0x0000558b6076c187 in innobase_start_or_create_for_mysql () at /data/src/10.2/storage/innobase/srv/srv0start.cc:2219
      #14 0x0000558b605acf99 in innobase_init (p=0x558b63c40210) at /data/src/10.2/storage/innobase/handler/ha_innodb.cc:4422
      #15 0x0000558b602a41b3 in ha_initialize_handlerton (plugin=0x558b63b4d430) at /data/src/10.2/sql/handler.cc:512
      #16 0x0000558b6004e9e3 in plugin_initialize (tmp_root=0x7ffd21bea9b0, plugin=0x558b63b4d430, argc=0x558b61578770 <remaining_argc>, argv=0x558b63a04370, options_only=false) at /data/src/10.2/sql/sql_plugin.cc:1413
      #17 0x0000558b6004f5ec in plugin_init (argc=0x558b61578770 <remaining_argc>, argv=0x558b63a04370, flags=2) at /data/src/10.2/sql/sql_plugin.cc:1695
      #18 0x0000558b5ff5c062 in init_server_components () at /data/src/10.2/sql/mysqld.cc:5255
      #19 0x0000558b5ff5d0e7 in mysqld_main (argc=144, argv=0x558b63a04370) at /data/src/10.2/sql/mysqld.cc:5845
      #20 0x0000558b5ff51fc0 in main (argc=22, argv=0x7ffd21beb748) at /data/src/10.2/sql/main.cc:25
      

      Test case is attached.
      Run it with --repeat=N --force-restart --mem. Sometimes it fails with the assertion failure from MDEV-13451, but mostly with this one.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.