MDEV-13452 Assertion `!recv_no_log_write' failed at startup

The previous fix (commit dcdc1c6d09b4a49b13fa8b1448064110bc296f86)
should have removed the assertion from log_close(), because every
caller that requires this assertion is already asserting that log
writes are allowed. When fil_names_clear() is called, it must be
able to write the MLOG_CHECKPOINT records. The purpose of the debug
variable recv_no_log_write is to prevent the creation of page-level
redo log records, or modifications to persistent data.